--- a/boomboxclient/package.json
+++ b/boomboxclient/package.json
@@ -8,6 +8,7 @@
     "react-router-dom": "^5.0.0",
     "react-router-hash-link": "^1.2.0",
     "react-scripts": "2.1.8",
+    "react-select": "^2.4.3",
     "spotify-web-api-js": "^1.2.0"
   },
   "scripts": {
