--- a/boomboxclient/package.json
+++ b/boomboxclient/package.json
@@ -7,6 +7,7 @@
     "re-base": "^4.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-router-hash-link": "^1.2.0",
     "react-scripts": "2.1.8",
