--- a/boomboxclient/package.json
+++ b/boomboxclient/package.json
@@ -32,5 +32,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-rangeslider": "^2.2.0"
+  }
 }
