--- a/boomboxclient/package.json
+++ b/boomboxclient/package.json
@@ -17,6 +17,7 @@
     "react-router-hash-link": "^1.2.0",
     "react-scripts": "2.1.8",
     "react-select": "^2.4.3",
+    "react-spotify-player": "^1.0.4",
     "spotify-web-api-js": "^1.2.0"
   },
   "scripts": {
