--- a/authorization_code/package.json
+++ b/authorization_code/package.json
@@ -8,6 +8,7 @@
     "cool-ascii-faces": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "firebase": "^5.10.1",
     "node-localstorage": "^1.3.1",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
